<resources>
    <string name="app_name">CLIENT_RESTAURANT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnReset">Reset</string>
    <string name="btnPausa">Pause</string>
    <string name="btnStart">Start</string>
    <string name="txtCont"></string>
    <string name="btnAsinc">Wine Timer</string>
    <string name="alert_dialog_dish_image_description">Dish Image</string>
    <string name="alert_dialog_dish_plus">+</string>
    <string name="alert_dialog_dish_minus">-</string>
    <string name="id_ticket">ID Ticket:</string>
    <string name="preu_ticket">Preu Ticket:</string>
    <string name="dish_name">Dish Name</string>
    <string name="delete">DELETE</string>
</resources>
